<resources>
    <string name="app_name">Tor VPN</string>

    <string name="action_save">Save</string>
    <string name="action_configure">Configure</string>
    <string name="action_connect">Connect</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="action_try_again">Try again</string>
    <string name="action_protect_all_apps">Protect all apps</string>
    <string name="action_protect_this_app">Protect this app</string>
...
    <string name="action_refresh_circuits">Refresh circuits</string>
    <string name="action_copy_logs">Copy logs</string>

    <string name="state_connected">Connected</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_disconnecting">Disconnecting</string>
    <string name="state_disconnected">Disconnected</string>

    <!-- app routing screen -->
    <string name="app_routing_tor_apps">Tor powered apps</string>
    <string name="app_routing_browsers">Browsers</string>
    <string name="app_routing_other_apps">Other apps</string>
    <string name="app_routing_system_apps">System apps</string>
...
    <string name="app_routing_hide_apps">Hide %1$s apps</string>

    <string name="notification_channel_description">Shows updates about TorVPN.</string>
    <string name="notification_channel_name">TorVPN notifications</string>

    <!-- configuration screen -->
    <string name="apps">Apps</string>
    <string name="apps_description">Choose apps to route through Tor</string>
    <string name="apps_description_all_protected">All apps protected</string>
    <string name="tor_logs">Tor Logs</string>
    <string name="tor_logs_description">View and copy your Tor logs</string>
    <string name="always_on_vpn">Always-on VPN</string>
    <string name="always_on_vpn_description">Open Android System Settings</string>
...
    <!-- combined up- and download statistics -->
    <string name="stats_combined">↓%2$s %1$s/s - ↑%4$s %3$s/s</string>

    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_detail_message">Tor VPN couldn’t connect to the Tor network.</string>
    <string name="error_view_logs">View Tor logs</string>
    <string name="connection">Connection</string>
    <string name="connection_description">Configure how to connect to Tor</string>
    <string name="kill_switch">Kill switch</string>
    <string name="kill_switch_description">Block apps from connecting to the internet if the Tor network can\'t be reached</string>
    <string name="quickstart">Auto-Connect</string>
    <string name="quickstart_description">Connect to the Tor network automatically when launched</string>
    <string name="exit_location">Exit location</string>
...
