...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_down_traffic"
                app:layout_constraintTop_toTopOf="parent"  />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_apps_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/stat_card_padding_vertical"
            android:layout_marginTop="8dp"
            android:background="@drawable/interactive_card_background"
            android:onClick="@{() -> viewModel.appCardClicked()}"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/switch_protect_apps"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_connection_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/stat_card_padding_vertical"
            android:layout_marginTop="8dp"
            android:background="@drawable/interactive_card_background"
            android:onClick="@{() -> viewModel.connectionCardClicked()}"
...
