...
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/radio_button"
                    android:clickable="false" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_exit_nodes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/exitnode_item_view" />
        </androidx.appcompat.widget.LinearLayoutCompat>
...
